--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.h2.console.enabled=true
+server.port=8080
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem: clinicaOdontologicaMack
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
