--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
 		</dependency>
 
 		<!--Spring Security-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
